@@ -4,22 +4,20 @@ import org.example.javablog.dto.UserDTO;
 import org.example.javablog.model.User;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class UserMapper {
     public static UserDTO toDTO(User user){
         return new UserDTO(
                 user.getId(),
-                user.getNametag(),
                 user.getFirstName(),
                 user.getLastName(),
-                user.getEmail(),
                 user.getUsername(),
                 user.getDescription(),
+                user.getRole(),
                 user.getCreatedAt()
         );
     }
     public static List<UserDTO> toDTOList(List<User> users) {
-        return users.stream().map(UserMapper::toDTO).collect(Collectors.toList());
+        return users.stream().map(UserMapper::toDTO).toList();
     }
 }
